startup script of springboot